[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py-timing-tool"
version = "1.0.0"
authors = [{ name="Your Name", email="you@example.com" }]
description = "A framework-agnostic, process-safe, local performance timer for Python applications."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT License" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic",
    "pandas",
    "plotly",
    "typer[all]",
    "rich",
    "appdirs"
]

# --- NEW: Add development dependencies here ---
[project.optional-dependencies]
dev = ["ruff", "pytest", "build"]

[project.urls]
"Homepage" = "https://github.com/your-repo/py-timing-tool"
"Bug Tracker" = "https://github.com/your-repo/py-timing-tool/issues"

[project.scripts]
timing = "timing.cli:app"

[tool.setuptools]
packages = ["timing", "timing.report", "timing.storage"]